--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
-  align-content: space-around;
+  justify-content: center;
+  flex-direction: column;
 }
 
 body,
@@ -41,7 +42,8 @@ body.light-theme .buttons .button:hover {
 
 .example {
   font-family: 'Roboto', sans-serif;
-  width: 550px;
+  width: 650px;
+  max-width: 100%;
   height: 378px;
   margin: auto;
   padding: 20px;
@@ -88,59 +90,4 @@ body.light-theme .buttons .button:hover {
 .example .button {
   display: inline-block;
   height: 50px;
-  box-sizing: border-box;
-  line-height: 46px;
-  text-decoration: none;
-  color: #333;
-  padding: 0px 20px;
-  border: solid 2px #333;
-  border-radius: 4px;
-  text-transform: uppercase;
-  font-weight: 700;
-  transition: all .2s ease-in-out;
-}
-
-.example .button:hover {
-  background-color: #333;
-  color: #FFF;
-}
-
-.example .button i {
-  margin-right: 5px;
-}
-
-@media(max-width: 550px) {
-  .example {
-    width: 100%;
-    height: 362px;
-  }
-
-  .example h1 {
-    font-size: 2.5em;
-  }
-
-  .example p {
-    margin-bottom: 25px;
-  }
-
-  .example .buttons {
-    width: 100%;
-    margin-top: 25px;
-    text-align: center;
-    display: block;
-  }
-
-  .example .buttons p,
-  .example .buttons a {
-    float: none;
-    margin: 0 auto;
-  }
-
-  .example .buttons p {
-    padding-right: 0px;
-  }
-
-  .example .buttons a {
-    display: inline-block;
-  }
-}
+  box-sizing:
