--- a/style.css
+++ b/style.css
@@ -90,4 +90,59 @@ body.light-theme .buttons .button:hover {
 .example .button {
   display: inline-block;
   height: 50px;
-  box-sizing:
+  box-sizing: border-box;
+  line-height: 46px;
+  text-decoration: none;
+  color: #333;
+  padding: 0px 20px;
+  border: solid 2px #333;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 700;
+  transition: all .2s ease-in-out;
+}
+
+.example .button:hover {
+  background-color: #333;
+  color: #FFF;
+}
+
+.example .button i {
+  margin-right: 5px;
+}
+
+@media (max-width: 768px) {
+  .example {
+    width: 100%;
+    padding: 0 10px;
+  }
+
+  .example h1 {
+    font-size: 2em;
+  }
+
+  .example p {
+    margin-bottom: 20px;
+  }
+
+  .example .buttons {
+    width: 100%;
+    margin-top: 25px;
+    text-align: center;
+    display: block;
+  }
+
+  .example .buttons p,
+  .example .buttons a {
+    float: none;
+    margin: 0 auto;
+  }
+
+  .example .buttons p {
+    padding-right: 0px;
+  }
+
+  .example .buttons a {
+    display: inline-block;
+  }
+}
