--- a/flipdown.css
+++ b/flipdown.css
@@ -70,17 +70,19 @@
 
 .flipdown {
   overflow: visible;
-  width: 660px; /* updated width to accommodate all rotor groups */
+  width: 800px; /* Increased width */
   max-width: 100%;
   height: 110px;
   display: flex;
   justify-content: center;
+  gap: 10px; /* Space between rotors */
 }
 
 .flipdown .rotor-group {
   position: relative;
   float: left;
-  padding-right: 40px; /* increased space between rotor groups */
+  padding-right: 40px;
+  flex-grow: 1; /* Allow groups to grow equally */
 }
 
 .flipdown .rotor-group:last-child {
@@ -133,7 +135,7 @@
 .flipdown .rotor {
   position: relative;
   float: left;
-  width: 50px;
+  width: 60px; /* Increased size of rotors */
   height: 80px;
   margin: 0px 5px 0px 0px;
   border-radius: 4px;
@@ -150,14 +152,14 @@
 .flipdown .rotor-bottom {
   overflow: hidden;
   position: absolute;
-  width: 50px;
+  width: 60px; /* Increased size */
   height: 40px;
 }
 
 .flipdown .rotor-leaf {
   z-index: 1;
   position: absolute;
-  width: 50px;
+  width: 60px; /* Increased size */
   height: 80px;
   transform-style: preserve-3d;
   transition: transform 0s;
@@ -172,12 +174,8 @@
 .flipdown .rotor-leaf-rear {
   overflow: hidden;
   position: absolute;
-  width: 50px;
+  width: 60px; /* Increased size */
   height: 40px;
-  margin: 0;
-  transform: rotateX(0deg);
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
 }
 
 .flipdown .rotor-leaf-front {
@@ -208,15 +206,14 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
-  width: 50px;
+  width: 60px; /* Increased size */
   height: 40px;
   border-radius: 0px 0px 4px 4px;
 }
 
 @media (max-width: 550px) {
-
   .flipdown {
-    width: 312px;
+    width: 400px;
     height: 70px;
   }
 
@@ -232,7 +229,7 @@
   .flipdown .rotor-top,
   .flipdown .rotor-bottom,
   .flipdown .rotor:after {
-    width: 30px;
+    width: 35px;
   }
 
   .flipdown .rotor-group {
