--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  align-content: space-around;
 }
 
 body,
@@ -42,8 +41,7 @@ body.light-theme .buttons .button:hover {
 
 .example {
   font-family: 'Roboto', sans-serif;
-  width: 650px;
-  max-width: 100%;
+  width: 550px;
   height: 378px;
   margin: auto;
   padding: 20px;
@@ -111,18 +109,18 @@ body.light-theme .buttons .button:hover {
   margin-right: 5px;
 }
 
-@media (max-width: 768px) {
+@media(max-width: 550px) {
   .example {
     width: 100%;
-    padding: 0 10px;
+    height: 362px;
   }
 
   .example h1 {
-    font-size: 2em;
+    font-size: 2.5em;
   }
 
   .example p {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
   }
 
   .example .buttons {
