Trying to fix :3
Absolutely sucking at this as always 
Love you <3

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body.light-theme .buttons .button:hover {
 
 .example {
   font-family: 'Roboto', sans-serif;
-  width: 550px;
+  width: 80%;
   height: 378px;
   margin: auto;
   padding: 20px;
