--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body.light-theme .buttons .button:hover {
 }
 
 .example .flipdown {
-  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .example h1 {
